<resources>
    <string name="app_name">The A TEAM RC car</string>
    <string name="button">Button</string>
    <string name="enternumber">enternumber</string>
    <string name="enter_a_number">enter a number</string>
    <string name="result">result</string>
    <string name="connect">connect</string>
    <string name="forward">forward</string>
    <string name="textview">TextView</string>
    <string name="send">send</string>
    <string name="u_send">u send ...</string>
    <string name="connection_to_bluetooth">connection to bluetooth</string>
    <string name="lighton">lighton</string>
    <string name="lightoff">lightoff</string>
    <string name="mmm">mmm</string>
    <string name="lightsenseor">LightSenseor</string>
    <string name="todo">TODO</string>
    <string name="auto">AUTO</string>
    <string name="into_page">into_page</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="out_page">out_page</string>
</resources>
