<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Arm">

    <!-- TODO: Update blank fragment layout -->

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/into"
            android:layout_width="110dp"
            android:layout_height="47dp"
            android:layout_marginStart="213dp"
            android:layout_marginLeft="213dp"
            android:layout_marginTop="214dp"
            android:layout_marginEnd="88dp"
            android:layout_marginRight="88dp"
            android:layout_marginBottom="470dp"
            android:text="@string/into_page"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/out"
            android:layout_width="110dp"
            android:layout_height="47dp"
            android:layout_marginStart="213dp"
            android:layout_marginLeft="213dp"
            android:layout_marginTop="296dp"
            android:layout_marginEnd="88dp"
            android:layout_marginRight="88dp"
            android:layout_marginBottom="388dp"
            android:text="@string/out_page"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/close"
            android:layout_width="120dp"
            android:layout_height="77dp"
            android:layout_marginStart="213dp"
            android:layout_marginLeft="213dp"
            android:layout_marginTop="444dp"
            android:layout_marginEnd="78dp"
            android:layout_marginRight="78dp"
            android:layout_marginBottom="210dp"
            android:text="@string/close"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/open"
            android:layout_width="120dp"
            android:layout_height="77dp"
            android:layout_marginStart="214dp"
            android:layout_marginLeft="214dp"
            android:layout_marginTop="562dp"
            android:layout_marginEnd="77dp"
            android:layout_marginRight="77dp"
            android:layout_marginBottom="92dp"
            android:text="@string/open"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/leftrot"
            android:layout_width="128dp"
            android:layout_height="114dp"
            android:layout_marginStart="44dp"
            android:layout_marginLeft="44dp"
            android:layout_marginTop="405dp"
            android:layout_marginEnd="239dp"
            android:layout_marginRight="239dp"
            android:layout_marginBottom="212dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/todo"
            android:scaleType="fitCenter"
            android:src="@drawable/leftrot"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/rightrot"
            android:layout_width="128dp"
            android:layout_height="114dp"
            android:layout_marginStart="44dp"
            android:layout_marginLeft="44dp"
            android:layout_marginTop="554dp"
            android:layout_marginEnd="239dp"
            android:layout_marginRight="239dp"
            android:layout_marginBottom="63dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/todo"
            android:scaleType="fitCenter"
            android:src="@drawable/rightrot"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/up2"
            android:layout_width="106dp"
            android:layout_height="98dp"
            android:layout_marginStart="44dp"
            android:layout_marginLeft="44dp"
            android:layout_marginTop="176dp"
            android:layout_marginEnd="261dp"
            android:layout_marginRight="261dp"
            android:layout_marginBottom="457dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/todo"
            android:scaleType="fitCenter"
            android:src="@drawable/up3"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/down2"
            android:layout_width="106dp"
            android:layout_height="98dp"
            android:layout_marginStart="44dp"
            android:layout_marginLeft="44dp"
            android:layout_marginTop="285dp"
            android:layout_marginEnd="261dp"
            android:layout_marginRight="261dp"
            android:layout_marginBottom="348dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/todo"
            android:scaleType="fitCenter"
            android:src="@drawable/down3"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>